bat.bool1.sleepin.SleepIn.scala.error
Compilation error:
SleepIn:3: error: Boolean does not take parameters
  if (weekday()==false | vacation()==false){
             ^SleepIn:3: error: Boolean does not take parameters
  if (weekday()==false | vacation()==false){
                                 ^